# MouseBrain-Template

./: CMakeLists.txt  LICENSE.md  README.md
include/: main.h
src/: main.cpp
